--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,23 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-main {
+  background-color: #282c34;
+  font-size: calc(10px + 2vmin);
+  min-height: 50vh;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-link {
